--- a/package.json
+++ b/package.json
@@ -3,19 +3,27 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cross-env NODE_ENV=dev NODE_CONFIG_DIR=./config/ nodemon -w src --exec \"npx babel-node ./index.js --presets es2015,stage-0\""
+   },
+   
+   
+  "presets": ["@babel/preset-env"],
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "sequelize": "^6.37.4",
     "tedious": "^18.6.1"
   },
   "devDependencies": {
+    "@babel/node": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "cross-env": "^7.0.3",
     "nodemon": "^3.1.7"
   }
 }
